kubernetes/auth.deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: auth-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
        - name: auth
          image: vikash8507/auth-microservice
