kubernetes/tasks.deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: tasks-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasks-api
  template:
    metadata:
      labels:
        app: tasks-api
    spec:
      containers:
        - name: tasks
          image: vikash8507/tasks-microservice
