kubernetes/users.deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: users-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
        - name: users
          image: vikash8507/users-microservice
