kubernetes/auth.service.yml
apiVersion: v1

kind: Service

metadata:
  name: auth-service

spec:
  selector:
    app: auth-api
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
