kubernetes/auth.yml
apiVersion: v1

kind: Service

metadata:
  name: auth-service

spec:
  selector:
    app: auth-api
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80

---

apiVersion: apps/v1

kind: Deployment

metadata:
  name: auth-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
        - name: auth
          image: vikash8507/auth-microservice
