kubernetes/postgres.service.yml
# postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - name: postgres-service-port
      port: 5432
      targetPort: 5432
