kubernetes/tasks.service.yml
apiVersion: v1

kind: Service

metadata:
  name: tasks-service

spec:
  selector:
    app: tasks-api
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 8002
      targetPort: 8002
