kubernetes/tasks.yml
apiVersion: v1

kind: Service

metadata:
  name: tasks-service

spec:
  selector:
    app: tasks-api
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 8002
      targetPort: 8002

---

apiVersion: apps/v1

kind: Deployment

metadata:
  name: tasks-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasks-api
  template:
    metadata:
      labels:
        app: tasks-api
    spec:
      containers:
        - name: tasks
          image: vikash8507/tasks-microservice
