kubernetes/users.service.yml
apiVersion: v1

kind: Service

metadata:
  name: users-service

spec:
  selector:
    app: users-api
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 8001
      targetPort: 8001
