kubernetes/users.yml
apiVersion: v1

kind: Service

metadata:
  name: users-service

spec:
  selector:
    app: users-api
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 8001
      targetPort: 8001

---

apiVersion: apps/v1

kind: Deployment

metadata:
  name: users-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
        - name: users
          image: vikash8507/users-microservice
